--- a/project/Build.xml
+++ b/project/Build.xml
@@ -26,7 +26,7 @@
 	<target id="NDLL" output="${LIBPREFIX}openfl_harfbuzz${MSVC_LIB_VERSION}${DEBUGEXTRA}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
 		
 		<outdir name="../ndll/${BINDIR}"/>
-		<ext value=".ndll" if="windows || macos || linux" />
+		<ext value=".ndll" if="windows || macos || mac || linux" />
 		<files id="common"/>
 		<files id="native-toolkit-freetype" />
 		<files id="native-toolkit-harfbuzz" />
