--- a/project/Build.xml
+++ b/project/Build.xml
@@ -1,7 +1,7 @@
 <xml>
 	
 	<include name="${HXCPP}/build-tool/BuildCommon.xml"/>
-	
+
 	<set name="NATIVE_TOOLKIT_PATH" value="../dependencies" />
 	<include name="${NATIVE_TOOLKIT_PATH}/freetype/files.xml" />
 	<include name="${NATIVE_TOOLKIT_PATH}/harfbuzz/files.xml" />
@@ -11,6 +11,7 @@
 		<compilerflag value="-I${NATIVE_TOOLKIT_PATH}/freetype/include"/>
 		<compilerflag value="-I${NATIVE_TOOLKIT_PATH}/harfbuzz/src"/>
 		<compilerflag value="-Iinclude" />
+		<compilerflag value="-Wno-c++11-extensions" />
 		
 		<file name="common/ExternalInterface.cpp"/>
 		<file name="common/openfl-harfbuzz.cpp"/>
@@ -27,7 +28,8 @@
 		
 		<outdir name="../ndll/${BINDIR}"/>
 		<ext value=".ndll" if="windows || macos || mac || linux" />
-		<files id="common"/>
+		
+		<files id="common" />
 		<files id="native-toolkit-freetype" />
 		<files id="native-toolkit-harfbuzz" />
 		
