Fix memory management related bugs. Improved performance.

--- a/project/Build.xml
+++ b/project/Build.xml
@@ -31,6 +31,10 @@
 		<files id="common" />
 		<files id="native-toolkit-freetype" />
 		<files id="native-toolkit-harfbuzz" />
+
+		<section if="blackberry">
+			<lib name="-lc" />
+		</section>
 		
 	</target>
 	
